--- a/_posts/2015-08-02-Intro.md
+++ b/_posts/2015-08-02-Intro.md
@@ -24,7 +24,7 @@ With FSI as a part of the editor, you can run F# scripts easily for fast feedbac
 
 ### Project Scaffolding
 
-The [Forge](http://fsharp-editing.github.io/Forge/) makes creating new projects quick and simple. Feature supported only in VSCode.
+The [Forge](http://forge.run/) makes creating new projects quick and simple. Feature supported only in VSCode.
 
 {: .gif}
 <img class="scale-with-grid" src="/img/yeoman.gif" />
